2003-05-23  Andreas Kupries  <andreask@activestate.com>

	* sak.tcl (gd-gen-rpmspec): Added functions to generate a .spec
	  file (RPM build specification). Added method 'rpmspec' to
	  generate tcllib.spec.

2003-05-20  Andreas Kupries  <andreask@activestate.com>

	* installed_modules.tcl: Added 'multiplexer' to the list of
	  installed modules. Tested and validqated module. Documentation
	  looks ok for me.

2003-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sak.tcl: added a critcl command to sak to build any critcl
	tcllib submodules into a tcllibc library (or separate libraries).

2003-05-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* comm.man: updated comm to v4.1
	* comm.tcl: rewrite of code to remove pseudo-object model.
	Clean up code, add send -command callback to allow for
	notification of results for asynchronous sends.

2003-05-09  Andreas Kupries  <andreask@activestate.com>

	* sak.tcl (modules_mod): Fixed incorrect check. Caused first
	  module to be reported as bogus although it isn't.

2003-05-08  Andreas Kupries  <andreask@activestate.com>

	* installer.tcl: Fixed typo in the code loading the new
	  'install_action.tcl', had used '...._actions'; note the trailing
	  's'. Thanks to Larry <lvirden@users.sourceforge.net> for
	  reporting this.

2003-05-07  Andreas Kupries  <andreask@activestate.com>

	* tcllib_version.tcl: Updated to 1.4.0.1 to distinguish the CVS
	  from the official release.

	* install_action.tcl:
	* installer.tcl:
	* sak.tcl: Lots of changes to make a number of command
	  module-ware. In the sense that they now work for individual
	  modules and not only for all in one go. The most important is
	  'validate'. IOW, it is now possible to validate a single module,
	  making this feature more convenient for a developer, as there is
	  less noise in the output. This required more sharing of code
	  with the installer.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*